[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "biosigpy"
version = "0.0.0"
description = "Python implementation of the Biosiglib specifications for biomedical signal processing."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "PyQt6",
]
dev = [
    "jsonschema",
    "matplotlib",
    "PyQt6",
    "pytest",
]
docs = [
    "mkdocs-material<9.7.0",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-redirects<1.2.3",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["src"]
